--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Xeopesca
 description: Asociación de software libre
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar:  https://www.xeopesca.gal/wp-content/uploads/2017/05/12.png
 
 #
 # Flags below are optional
