--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ footer-links:
   rss:  feed.xml # just type anything here for a working RSS icon
   twitter: xeopesca
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
-  youtube: /xeopesca   # or user/<user-name>
+  youtube: xeopesca   # or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
 
 
